# rag_with_python_gpt

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
data/: Vision-Mission.txt  about-who-we-are.txt  campuses.txt  english.txt  gpis_website_data.txt  keyfeature.txt  liberty_global_website_data.txt  postgraduate.txt  strategy_first_website_data.txt  strategyfirst_college_data_price.txt  system_state.json  ug_strategy_first_website_data.txt
